--- a/GiftForGood/views/client/brand-message.ejs
+++ b/GiftForGood/views/client/brand-message.ejs
@@ -251,6 +251,13 @@
 <script>
     let gift = <%- JSON.stringify(gift) %>
 
+    if (gift['_products'].length) {
+        $('#cart-badge').show();
+        $('#cart-badge').html(gift['_products'].length);
+    } else {
+        $('#cart-badge').hide();
+    }
+
 	$('.backstep_btn').on('click', function() {
 		window.location.href = '/step2?gid=' + gift['_id'];
 	});
