--- a/GiftForGood/views/client/client-dashboard.ejs
+++ b/GiftForGood/views/client/client-dashboard.ejs
@@ -11,7 +11,7 @@
 
     <div class="admin_main">
 
-        <div class="alert alert-dismissible fade show signed_alart" role="alert">
+        <div class="alert alert-dismissible fade show signed_alart d-none" role="alert">
             <img src="/resources/images/icons/green-tic.png" alt="img"/>
             Signed in successfully.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
