--- a/GiftForGood/views/partials/sidebar.ejs
+++ b/GiftForGood/views/partials/sidebar.ejs
@@ -40,3 +40,7 @@
         </ul>
     </div>
 </div>
+
+<div class="alert alert-bar alert-success text-center" id="alert-bar" style="margin-left: 230px;">
+    <strong id="alert-title"></strong> <span id="alert-content"></span>
+</div>
