--- a/GiftForGood/public/resources/css/style.css
+++ b/GiftForGood/public/resources/css/style.css
@@ -66,7 +66,7 @@ a:hover, a:focus{
 	padding: 5px 0px;
 }
 .get_dropdown{
-	width: 357px;
+	width: 318px;
 	box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.06);
 	margin-top: 15px;
 	border-radius: 0px;
@@ -720,6 +720,21 @@ Custome Select
 	color: #7B7B7B;
 	padding-top: 10px;
 }
+
+.csv-content-area {
+	width: 100%;
+	height: 300px;
+}
+
+.csv-content-section {
+	padding: 20px 30px;
+}
+
+.csv-content-section table {
+	width: 100%;
+}
+
+.csv-content-section,
 .drag_choose_field{
 	position: absolute;
 	top: 0px;
@@ -1356,6 +1371,7 @@ Custome Select
 	box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.02);
 	padding: 50px;
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	text-align: center;
 	min-height: 230px;
@@ -1369,6 +1385,7 @@ Custome Select
 	font-size: 31px;
 	line-height: 42px;
 	color: #000000;
+	margin-top: 10px;
 }
 .gift_sent_info_box h5{
 	font-size: 16px;
@@ -2276,6 +2293,24 @@ Custome Select
 	width: 130px;
 	height: 45px;
 	padding: 8px;
+}
+
+/*************end*************/
+
+/* Alert bar and the badge */
+
+.alert.alert-bar {
+	position: fixed;
+	width: 100%;
+	z-index: 1000;
+	display: none;
+}
+
+.btn-group .badge {
+	position: absolute;
+	border-radius: 50%;
+	background-color: #C8B398;
+	color: white;
 }
 
 /*************end*************/
