--- a/GiftForGood/views/client/client-login.ejs
+++ b/GiftForGood/views/client/client-login.ejs
@@ -4,6 +4,10 @@
 
 <body>
 
+<div class="alert alert-bar alert-success text-center" id="alert-bar">
+    <strong id="alert-title"></strong> <span id="alert-content"></span>
+</div>
+
 <div class="login_logo">
     <a href="#"><img src="/resources/images/logo-2.png" alt="logo"/></a>
 </div>
@@ -90,15 +94,17 @@
                     if (!redirect_url) {
                     	redirect_url = '/';
                     }
-                    window.location.href = redirect_url;
+                    showInfo('Signed in successfully.');
+                    setTimeout(() => { window.location.href = redirect_url; }, 2500);
                 },
-                error: function (jqXHR, exception) {
-                    console.log(exception);
-                    alert('Invalid email or password');
+                error: function (err) {
+                    const { status, msg } = err.responseJSON;
+                    if (status === 'failed') {
+                        showError(msg);
+                    }
                 }
             })
         }
-        window.location.href = '/gifts';
     });
 </script>
 
