--- a/GiftForGood/views/client/gift-it-forward.ejs
+++ b/GiftForGood/views/client/gift-it-forward.ejs
@@ -18,7 +18,7 @@
                             <br/>
                             by giving the
                         </span>
-                        <span class="custom-select ml-auto">
+                        <span class="custom-select ml-auto" style="vertical-align: middle;">
                           <select id="price-select">
                           <%
                           let options = [25, 50, 75, 100, 150, 200, 1000];
@@ -145,6 +145,13 @@
         selected_product_ids.push(gift['_products'][i]['_id']);
     }
 
+    if (selected_product_ids.length) {
+        $('#cart-badge').show();
+        $('#cart-badge').html(selected_product_ids.length);
+    } else {
+        $('#cart-badge').hide();
+    }
+
 	$("#price-select").next().next().on('click', function() {
 		const selected_price = $("#price-select").val();
 		const cur_url = new URL(window.location.href);
@@ -168,13 +175,17 @@
             const index = $(this).attr('index');
             const selected_product = products[index];
             const product_id = selected_product['_id'];
-            selected_product_ids.push(product_id);
             $.ajax({
                 url: '/step1/add-product',
                 method: 'post',
                 data: { pid: product_id, gid: gift['_id'] },
                 success: function (res) {
                     gift['_id'] = res.gift_id;
+                    selected_product_ids.push(product_id);
+                    $('#cart-badge').show();
+                    $('#cart-badge').html(selected_product_ids.length);
+                    showInfo('Product has been added into the collection');
+
                     const product_image = selected_product['Image Src'];
                     const product_title = selected_product['Title'];
                     const product_price = (Math.round(selected_product['Variant Price'] * 100) / 100).toFixed(2);
